# Hack-Club-News

./: .gitignore  README.md  app.py  pyproject.toml
data/: posts.json
docs/: index.html  settings.html
docs/post/: 0.html  1.html  2.html
static/: styles.css
templates/: custom_theme.html  login.html  nav.html  newpost.html  post.html  settings.html
