[project]
name = "hack-club-news"
version = "0.1.0"
description = "Hack Club News is a platform like Hacker News for Hack Clubers to share any new and interesting news."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "feed2json>=2025.7.15",
    "flask>=3.1.2",
    "jinja2>=3.1.6",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]
